# rust-rpg-api

./: Cargo.toml  README.md
rust-rpg-api/: Cargo.toml  Dockerfile
rust-rpg-api/src/: main.rs
rust-rpg-api/src/apis/: manage.rs
rust-rpg-api/src/configs/: config.rs
rust-rpg-api/src/data_models/: user.rs
rust-rpg-auth-server/: Cargo.toml
rust-rpg-auth-server/src/: main.rs
src/: main.rs
src/apis/: manage.rs  mod.rs  services.rs
src/configs/: config.rs  configs.rs
src/data_models/: mod.rs  rest_models.rs  user.rs
