[package]
name = "rust-rpg-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.0", features = ["openssl"]}
openssl = "0.10.57"
tokio = "1.33"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
utoipa = { version = "4", features = ["actix_extras"] }
