[package]
name = "rust-rpg-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.57"
tokio = {version = "1.33", features = ["rt"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]